--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
-﻿streamlit-drawable-canvas
+streamlit==1.38.0
+streamlit-drawable-canvas==0.9.3
+opencv-python-headless==4.10.0.84
+Pillow==10.0.1
+pandas==2.1.1
+numpy==1.25.2
+requests==2.31.0
+matplotlib==3.8.0
+seaborn==0.12.2
+scikit-learn==1.3.2
+scipy==1.11.3
+scikit-learn==1.3.2
+scipy==1.11.3
