--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-streamlit>=1.23.1
-streamlit-drawable-canvas==0.9.3
-Pillow==10.0.1
-numpy==1.25.2
-pandas==2.1.1
+streamlit>=1.38.0
+streamlit-drawable-canvas>=0.9.3
+Pillow>=10.0.1
